--- a/examples/k-adapter/index.html
+++ b/examples/k-adapter/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
   </head>
   <body class="container">
-    <h1>axios.get</h1>
+    <h1>axios.get use fetch</h1>
     <ul id="people" class="list-unstyled"></ul>
 
     <script src="/axios.min.js"></script>
